# rqos

./: .gitignore  Cargo.toml  edit.sh  gc  gd  gl  glist  gs  install.sh  run.sh  todo.md
ansi/: Cargo.toml
ansi/src/: lib.rs
color/: Cargo.toml
color/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
edit/: Cargo.toml
edit/src/: lib.rs
font/: Cargo.toml
font/src/: lib.rs
font_editor/: Cargo.toml
font_editor/src/: font_editor.rs  main.rs
resources/: color.frag  color_bold.frag  test_delayed_execution.sh
rqsh/: Cargo.toml
rqsh/src/: app.rs  args.rs  builtin.rs  execute.rs  glob.rs  main.rs  util.rs
scripts/: test_ansi_codes.sh  test_colors.sh  test_stdouterr.sh
src/: char.rs  font.rs  font_editor.rs  main.rs
text/: Cargo.toml
text/src/: lib.rs
