[package]
name = "rqos"
version = "0.1.1"
authors = ["Raoul van Putten <53082972+rvputten@users.noreply.github.com>"]
edition = "2021"
description = "Operating system on top of the Linux kernel and sfml"
license = "MIT"
repository = "https://github.com/rvputten/rqos.git"
default-run = "rqsh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "font",
    "text",
    "edit",
    "color",
    "font_editor",
    "rqsh",
]

[[bin]]
name = "rqsh"
path = "rqsh/src/main.rs"

[[bin]]
name = "font_editor"
path = "font_editor/src/main.rs"

[dependencies]
sfml = "0.21"
font = { path = "font" }
text = { path = "text" }
edit = { path = "edit" }
color = { path = "color" }
