[package]
name = "rqsh"
description = "Terminal and shell using rqos"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sfml.workspace = true
color.workspace = true
config.workspace = true
text.workspace = true
edit.workspace = true
font.workspace = true
